--- a/display_2_default.html
+++ b/display_2_default.html
@@ -50,346 +50,166 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u176" class="ax_default box_1">
-        <div id="u176_div" class=""></div>
-        <div id="u176_text" class="text " style="display:none; visibility: hidden">
+      <div id="u47" class="ax_default box_1">
+        <div id="u47_div" class=""></div>
+        <div id="u47_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u177" class="ax_default box_1">
-        <div id="u177_div" class=""></div>
-        <div id="u177_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <div id="u48" class="ax_default label">
+        <div id="u48_div" class=""></div>
+        <div id="u48_text" class="text ">
+          <p><span>Default_默认状态</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (图像) -->
-      <div id="u178" class="ax_default _图像">
-        <img id="u178_img" class="img " src="images/display_2_default/u178.gif"/>
-        <div id="u178_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Unnamed (动态面板) -->
+      <div id="u49" class="ax_default">
+        <div id="u49_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u49_state0_content" class="panel_state_content">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u179" class="ax_default box_3">
-        <div id="u179_div" class=""></div>
-        <div id="u179_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u180" class="ax_default label">
-        <div id="u180_div" class=""></div>
-        <div id="u180_text" class="text ">
-          <p><span>Display_2(功率页)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u181" class="ax_default label">
-        <div id="u181_div" class=""></div>
-        <div id="u181_text" class="text ">
-          <p><span>背景：纯黑色（#000000）</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u182" class="ax_default label">
-        <div id="u182_div" class=""></div>
-        <div id="u182_text" class="text ">
-          <p><span>接口类型：固定C1、C2、A1，通电状态下为浅灰色（#e5e5e5）未通电状态下为深灰色（#666666）</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u183" class="ax_default" data-left="477" data-top="1692" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u184" class="ax_default marker">
-          <img id="u184_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u184_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
+            <!-- Unnamed (图像) -->
+            <div id="u50" class="ax_default _图像">
+              <img id="u50_img" class="img " src="images/display_1_default/u35.gif"/>
+              <div id="u50_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
           </div>
         </div>
+        <div id="u49_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u49_state1_content" class="panel_state_content">
 
-        <!-- Unnamed (矩形) -->
-        <div id="u185" class="ax_default label">
-          <div id="u185_div" class=""></div>
-          <div id="u185_text" class="text ">
-            <p><span>3</span></p>
+            <!-- Unnamed (图像) -->
+            <div id="u51" class="ax_default _图像">
+              <img id="u51_img" class="img " src="images/display_1_default/u36.gif"/>
+              <div id="u51_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+        <div id="u49_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
+          <div id="u49_state2_content" class="panel_state_content">
 
-      <!-- Unnamed (组合) -->
-      <div id="u186" class="ax_default" data-left="477" data-top="1755" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u187" class="ax_default marker">
-          <img id="u187_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u187_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
+            <!-- Unnamed (图像) -->
+            <div id="u52" class="ax_default _图像">
+              <img id="u52_img" class="img " src="images/display_1_default/u37.gif"/>
+              <div id="u52_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
           </div>
         </div>
+        <div id="u49_state3" class="panel_state" data-label="状态5" style="visibility: hidden;">
+          <div id="u49_state3_content" class="panel_state_content">
 
-        <!-- Unnamed (矩形) -->
-        <div id="u188" class="ax_default label">
-          <div id="u188_div" class=""></div>
-          <div id="u188_text" class="text ">
-            <p><span>4</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u189" class="ax_default" data-left="477" data-top="1628" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u190" class="ax_default marker">
-          <img id="u190_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u190_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u191" class="ax_default label">
-          <div id="u191_div" class=""></div>
-          <div id="u191_text" class="text ">
-            <p><span>2</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u192" class="ax_default" data-left="477" data-top="1819" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u193" class="ax_default marker">
-          <img id="u193_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u193_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u194" class="ax_default label">
-          <div id="u194_div" class=""></div>
-          <div id="u194_text" class="text ">
-            <p><span>5</span></p>
+            <!-- Unnamed (图像) -->
+            <div id="u53" class="ax_default _图像">
+              <img id="u53_img" class="img " src="images/display_1_default/u39.gif"/>
+              <div id="u53_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u195" class="ax_default label">
-        <div id="u195_div" class=""></div>
-        <div id="u195_text" class="text ">
-          <p><span>通电状态：输入则显示Input，输出则显示Output，未通电则不显示内容。</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u196" class="ax_default label">
-        <div id="u196_div" class=""></div>
-        <div id="u196_text" class="text ">
-          <p><span>功率：动态功率（W）表示，小数点向上取整，颜色为浅灰色（#EBEBEB)，未通电则不显示内容</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u197" class="ax_default" data-left="477" data-top="1564" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u198" class="ax_default marker">
-          <img id="u198_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u198_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u199" class="ax_default label">
-          <div id="u199_div" class=""></div>
-          <div id="u199_text" class="text ">
-            <p><span>1</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u200" class="ax_default" data-left="129" data-top="1578" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u201" class="ax_default marker">
-          <img id="u201_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u201_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u202" class="ax_default label">
-          <div id="u202_div" class=""></div>
-          <div id="u202_text" class="text ">
-            <p><span>1</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u203" class="ax_default" data-left="164" data-top="1608" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u204" class="ax_default marker">
-          <img id="u204_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u204_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u205" class="ax_default label">
-          <div id="u205_div" class=""></div>
-          <div id="u205_text" class="text ">
-            <p><span>2</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u206" class="ax_default" data-left="217" data-top="1608" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u207" class="ax_default marker">
-          <img id="u207_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u207_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u208" class="ax_default label">
-          <div id="u208_div" class=""></div>
-          <div id="u208_text" class="text ">
-            <p><span>3</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u209" class="ax_default" data-left="270" data-top="1608" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u210" class="ax_default marker">
-          <img id="u210_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u210_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u211" class="ax_default label">
-          <div id="u211_div" class=""></div>
-          <div id="u211_text" class="text ">
-            <p><span>4</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (图像) -->
-      <div id="u212" class="ax_default _图像">
-        <img id="u212_img" class="img " src="images/display_2_default/u212.png"/>
-        <div id="u212_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u213" class="ax_default" data-left="312" data-top="1608" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u214" class="ax_default marker">
-          <img id="u214_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u214_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u215" class="ax_default label">
-          <div id="u215_div" class=""></div>
-          <div id="u215_text" class="text ">
-            <p><span>5</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u216" class="ax_default label">
-        <div id="u216_div" class=""></div>
-        <div id="u216_text" class="text ">
-          <p><span>输入箭头：绿色（#0CFF00）不透明度0%~100%~0%，缓入缓出，周期1s。</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u217" class="ax_default primary_button">
-        <div id="u217_div" class=""></div>
-        <div id="u217_text" class="text ">
+      <div id="u54" class="ax_default primary_button">
+        <div id="u54_div" class=""></div>
+        <div id="u54_text" class="text ">
           <p><span>电源键</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图像) -->
-      <div id="u218" class="ax_default _图像">
-        <img id="u218_img" class="img " src="images/off/u4.png"/>
-        <div id="u218_text" class="text " style="display:none; visibility: hidden">
+      <div id="u55" class="ax_default _图像">
+        <img id="u55_img" class="img " src="images/off/u4.png"/>
+        <div id="u55_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u219" class="ax_default primary_button">
-        <div id="u219_div" class=""></div>
-        <div id="u219_text" class="text ">
-          <p><span>USB-C1 输入</span></p>
+      <div id="u56" class="ax_default _文本">
+        <div id="u56_div" class=""></div>
+        <div id="u56_text" class="text ">
+          <p><span>100</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u220" class="ax_default primary_button">
-        <div id="u220_div" class=""></div>
-        <div id="u220_text" class="text ">
-          <p><span>USB-C1 输出</span></p>
+      <div id="u57" class="ax_default primary_button">
+        <div id="u57_div" class=""></div>
+        <div id="u57_text" class="text ">
+          <p><span>电量归零</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u58" class="ax_default">
+        <div id="u58_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u58_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u59" class="ax_default _图像">
+              <img id="u59_img" class="img " src="images/display_1_default/u44.png"/>
+              <div id="u59_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u58_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u58_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u60" class="ax_default _图像">
+              <img id="u60_img" class="img " src="images/display_1_default/u45.gif"/>
+              <div id="u60_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u58_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
+          <div id="u58_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u61" class="ax_default _图像">
+              <img id="u61_img" class="img " src="images/display_1_default/u46.gif"/>
+              <div id="u61_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u221" class="ax_default primary_button">
-        <div id="u221_div" class=""></div>
-        <div id="u221_text" class="text ">
-          <p><span>USB-C2 输入</span></p>
+      <div id="u62" class="ax_default primary_button">
+        <div id="u62_div" class=""></div>
+        <div id="u62_text" class="text ">
+          <p><span>输出</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u222" class="ax_default primary_button">
-        <div id="u222_div" class=""></div>
-        <div id="u222_text" class="text ">
-          <p><span>USB-C2 输出</span></p>
+      <div id="u63" class="ax_default primary_button">
+        <div id="u63_div" class=""></div>
+        <div id="u63_text" class="text ">
+          <p><span>输入</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u223" class="ax_default primary_button">
-        <div id="u223_div" class=""></div>
-        <div id="u223_text" class="text ">
-          <p><span>USB-A 输出</span></p>
+      <div id="u64" class="ax_default primary_button">
+        <div id="u64_div" class=""></div>
+        <div id="u64_text" class="text ">
+          <p><span>电量充满</span></p>
         </div>
       </div>
     </div>
