--- a/display_3_default.html
+++ b/display_3_default.html
@@ -50,278 +50,346 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u1152" class="ax_default box_1">
-        <div id="u1152_div" class=""></div>
-        <div id="u1152_text" class="text " style="display:none; visibility: hidden">
+      <div id="u65" class="ax_default box_1">
+        <div id="u65_div" class=""></div>
+        <div id="u65_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1153" class="ax_default box_1">
-        <div id="u1153_div" class=""></div>
-        <div id="u1153_text" class="text " style="display:none; visibility: hidden">
+      <div id="u66" class="ax_default box_1">
+        <div id="u66_div" class=""></div>
+        <div id="u66_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (图像) -->
-      <div id="u1154" class="ax_default _图像">
-        <img id="u1154_img" class="img " src="images/display_3_default/u1154.gif"/>
-        <div id="u1154_text" class="text " style="display:none; visibility: hidden">
+      <div id="u67" class="ax_default _图像">
+        <img id="u67_img" class="img " src="images/display_3_default/u67.gif"/>
+        <div id="u67_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1155" class="ax_default box_3">
-        <div id="u1155_div" class=""></div>
-        <div id="u1155_text" class="text " style="display:none; visibility: hidden">
+      <div id="u68" class="ax_default box_3">
+        <div id="u68_div" class=""></div>
+        <div id="u68_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1156" class="ax_default label">
-        <div id="u1156_div" class=""></div>
-        <div id="u1156_text" class="text ">
-          <p><span>Display_3(安全页)</span></p>
+      <div id="u69" class="ax_default label">
+        <div id="u69_div" class=""></div>
+        <div id="u69_text" class="text ">
+          <p><span>Display_2(功率页)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1157" class="ax_default label">
-        <div id="u1157_div" class=""></div>
-        <div id="u1157_text" class="text ">
-          <p><span>背景：纯黑色（#000000），呼吸灯同步Display1状态变化，透明度为Display 1的60%。</span></p><p><span>扫描光环周期为1.5s，在1s时衔接第二环，渐变色（#FFFFFF）不透明度23%~（#FFFFFF）不透明度0%。</span></p>
+      <div id="u70" class="ax_default label">
+        <div id="u70_div" class=""></div>
+        <div id="u70_text" class="text ">
+          <p><span>背景：纯黑色（#000000）</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1158" class="ax_default label">
-        <div id="u1158_div" class=""></div>
-        <div id="u1158_text" class="text ">
-          <p><span>页面名称：Battery Health，浅灰色（#EBEBEB)</span></p>
+      <div id="u71" class="ax_default label">
+        <div id="u71_div" class=""></div>
+        <div id="u71_text" class="text ">
+          <p><span>接口类型：固定C1、C2、A1，通电状态下为浅灰色（#e5e5e5）未通电状态下为深灰色（#666666）</span></p>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u1159" class="ax_default" data-left="474" data-top="1689" data-width="30" data-height="40">
+      <div id="u72" class="ax_default" data-left="477" data-top="1692" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1160" class="ax_default marker">
-          <img id="u1160_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1160_text" class="text " style="display:none; visibility: hidden">
+        <div id="u73" class="ax_default marker">
+          <img id="u73_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u73_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1161" class="ax_default label">
-          <div id="u1161_div" class=""></div>
-          <div id="u1161_text" class="text ">
+        <div id="u74" class="ax_default label">
+          <div id="u74_div" class=""></div>
+          <div id="u74_text" class="text ">
             <p><span>3</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u1162" class="ax_default" data-left="474" data-top="1752" data-width="30" data-height="40">
+      <div id="u75" class="ax_default" data-left="477" data-top="1755" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1163" class="ax_default marker">
-          <img id="u1163_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1163_text" class="text " style="display:none; visibility: hidden">
+        <div id="u76" class="ax_default marker">
+          <img id="u76_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u76_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1164" class="ax_default label">
-          <div id="u1164_div" class=""></div>
-          <div id="u1164_text" class="text ">
+        <div id="u77" class="ax_default label">
+          <div id="u77_div" class=""></div>
+          <div id="u77_text" class="text ">
             <p><span>4</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u1165" class="ax_default" data-left="474" data-top="1625" data-width="30" data-height="40">
+      <div id="u78" class="ax_default" data-left="477" data-top="1628" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1166" class="ax_default marker">
-          <img id="u1166_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1166_text" class="text " style="display:none; visibility: hidden">
+        <div id="u79" class="ax_default marker">
+          <img id="u79_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u79_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1167" class="ax_default label">
-          <div id="u1167_div" class=""></div>
-          <div id="u1167_text" class="text ">
+        <div id="u80" class="ax_default label">
+          <div id="u80_div" class=""></div>
+          <div id="u80_text" class="text ">
             <p><span>2</span></p>
           </div>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u1168" class="ax_default label">
-        <div id="u1168_div" class=""></div>
-        <div id="u1168_text" class="text ">
-          <p><span>电池健康度：向上取整</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1169" class="ax_default label">
-        <div id="u1169_div" class=""></div>
-        <div id="u1169_text" class="text ">
-          <p><span>技术标识：SenseForce技术标识</span></p>
-        </div>
-      </div>
-
       <!-- Unnamed (组合) -->
-      <div id="u1170" class="ax_default" data-left="474" data-top="1561" data-width="30" data-height="40">
+      <div id="u81" class="ax_default" data-left="477" data-top="1819" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1171" class="ax_default marker">
-          <img id="u1171_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1171_text" class="text " style="display:none; visibility: hidden">
+        <div id="u82" class="ax_default marker">
+          <img id="u82_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u82_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1172" class="ax_default label">
-          <div id="u1172_div" class=""></div>
-          <div id="u1172_text" class="text ">
+        <div id="u83" class="ax_default label">
+          <div id="u83_div" class=""></div>
+          <div id="u83_text" class="text ">
+            <p><span>5</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u84" class="ax_default label">
+        <div id="u84_div" class=""></div>
+        <div id="u84_text" class="text ">
+          <p><span>通电状态：输入则显示Input，输出则显示Output，未通电则不显示内容。</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u85" class="ax_default label">
+        <div id="u85_div" class=""></div>
+        <div id="u85_text" class="text ">
+          <p><span>功率：动态功率（W）表示，小数点向上取整，颜色为浅灰色（#EBEBEB)，未通电则不显示内容</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u86" class="ax_default" data-left="477" data-top="1564" data-width="30" data-height="40">
+
+        <!-- Unnamed (水滴) -->
+        <div id="u87" class="ax_default marker">
+          <img id="u87_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u87_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u88" class="ax_default label">
+          <div id="u88_div" class=""></div>
+          <div id="u88_text" class="text ">
             <p><span>1</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u1173" class="ax_default" data-left="130" data-top="1581" data-width="30" data-height="40">
+      <div id="u89" class="ax_default" data-left="129" data-top="1578" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1174" class="ax_default marker">
-          <img id="u1174_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1174_text" class="text " style="display:none; visibility: hidden">
+        <div id="u90" class="ax_default marker">
+          <img id="u90_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u90_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1175" class="ax_default label">
-          <div id="u1175_div" class=""></div>
-          <div id="u1175_text" class="text ">
+        <div id="u91" class="ax_default label">
+          <div id="u91_div" class=""></div>
+          <div id="u91_text" class="text ">
             <p><span>1</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u92" class="ax_default" data-left="164" data-top="1608" data-width="30" data-height="40">
+
+        <!-- Unnamed (水滴) -->
+        <div id="u93" class="ax_default marker">
+          <img id="u93_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u93_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u94" class="ax_default label">
+          <div id="u94_div" class=""></div>
+          <div id="u94_text" class="text ">
+            <p><span>2</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u95" class="ax_default" data-left="217" data-top="1608" data-width="30" data-height="40">
+
+        <!-- Unnamed (水滴) -->
+        <div id="u96" class="ax_default marker">
+          <img id="u96_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u96_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u97" class="ax_default label">
+          <div id="u97_div" class=""></div>
+          <div id="u97_text" class="text ">
+            <p><span>3</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u98" class="ax_default" data-left="270" data-top="1608" data-width="30" data-height="40">
+
+        <!-- Unnamed (水滴) -->
+        <div id="u99" class="ax_default marker">
+          <img id="u99_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u99_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u100" class="ax_default label">
+          <div id="u100_div" class=""></div>
+          <div id="u100_text" class="text ">
+            <p><span>4</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (图像) -->
-      <div id="u1176" class="ax_default _图像">
-        <img id="u1176_img" class="img " src="images/display_3_default/u1154.gif"/>
-        <div id="u1176_text" class="text " style="display:none; visibility: hidden">
+      <div id="u101" class="ax_default _图像">
+        <img id="u101_img" class="img " src="images/display_3_default/u101.png"/>
+        <div id="u101_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u1177" class="ax_default" data-left="235" data-top="1568" data-width="30" data-height="40">
+      <div id="u102" class="ax_default" data-left="312" data-top="1608" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u1178" class="ax_default marker">
-          <img id="u1178_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1178_text" class="text " style="display:none; visibility: hidden">
+        <div id="u103" class="ax_default marker">
+          <img id="u103_img" class="img " src="images/display_1_default/u17.svg"/>
+          <div id="u103_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u1179" class="ax_default label">
-          <div id="u1179_div" class=""></div>
-          <div id="u1179_text" class="text ">
-            <p><span>2</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u1180" class="ax_default" data-left="286" data-top="1654" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u1181" class="ax_default marker">
-          <img id="u1181_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1181_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u1182" class="ax_default label">
-          <div id="u1182_div" class=""></div>
-          <div id="u1182_text" class="text ">
-            <p><span>3</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u1183" class="ax_default" data-left="291" data-top="1752" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u1184" class="ax_default marker">
-          <img id="u1184_img" class="img " src="images/display_1_default/u20.svg"/>
-          <div id="u1184_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u1185" class="ax_default label">
-          <div id="u1185_div" class=""></div>
-          <div id="u1185_text" class="text ">
-            <p><span>3</span></p>
+        <div id="u104" class="ax_default label">
+          <div id="u104_div" class=""></div>
+          <div id="u104_text" class="text ">
+            <p><span>5</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1186" class="ax_default primary_button">
-        <div id="u1186_div" class=""></div>
-        <div id="u1186_text" class="text ">
+      <div id="u105" class="ax_default label">
+        <div id="u105_div" class=""></div>
+        <div id="u105_text" class="text ">
+          <p><span>输入箭头：绿色（#0CFF00）不透明度0%~100%~0%，缓入缓出，周期1s。</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u106" class="ax_default primary_button">
+        <div id="u106_div" class=""></div>
+        <div id="u106_text" class="text ">
           <p><span>电源键</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (组合) -->
-      <div id="u1187" class="ax_default" data-left="0" data-top="0" data-width="0" data-height="0">
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1188" class="ax_default primary_button">
-        <div id="u1188_div" class=""></div>
-        <div id="u1188_text" class="text ">
-          <p><span>输出</span></p>
-        </div>
-      </div>
-
       <!-- Unnamed (图像) -->
-      <div id="u1189" class="ax_default _图像">
-        <img id="u1189_img" class="img " src="images/off/u4.png"/>
-        <div id="u1189_text" class="text " style="display:none; visibility: hidden">
+      <div id="u107" class="ax_default _图像">
+        <img id="u107_img" class="img " src="images/off/u4.png"/>
+        <div id="u107_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1190" class="ax_default primary_button">
-        <div id="u1190_div" class=""></div>
-        <div id="u1190_text" class="text ">
-          <p><span>输入</span></p>
+      <div id="u108" class="ax_default primary_button">
+        <div id="u108_div" class=""></div>
+        <div id="u108_text" class="text ">
+          <p><span>USB-C1 输入</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u109" class="ax_default primary_button">
+        <div id="u109_div" class=""></div>
+        <div id="u109_text" class="text ">
+          <p><span>USB-C1 输出</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u110" class="ax_default primary_button">
+        <div id="u110_div" class=""></div>
+        <div id="u110_text" class="text ">
+          <p><span>USB-C2 输入</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u111" class="ax_default primary_button">
+        <div id="u111_div" class=""></div>
+        <div id="u111_text" class="text ">
+          <p><span>USB-C2 输出</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u112" class="ax_default primary_button">
+        <div id="u112_div" class=""></div>
+        <div id="u112_text" class="text ">
+          <p><span>USB-A 输出</span></p>
         </div>
       </div>
     </div>
